# kiro-harness

./: README.md  SCOPE-PHASES.md
.kiro/specs/kiro-worker-architecture-phase0/: .config.kiro  architecture.md  design.md  kiro-native-capabilities.md  kiro-output-contract.md  requirements.md  (+4 more)
kiro-worker/: .env  .env.example  README.md  alembic.ini  kiro_worker.db  kiro_worker.db-shm  kiro_worker.db-wal  pyproject.toml  start.sh
kiro-worker/alembic/: env.py
kiro-worker/alembic/versions/: 0001_initial_schema.py  0002_run_progress_fields.py  0003_run_cancelled_status.py
kiro-worker/docs/: api-examples.md  integration-test-plan.md  setup.md
kiro-worker/kiro-agent-config/: AGENTS.md.template  repo-engineer.json
kiro-worker/scripts/: recover_run.py
kiro-worker/src/kiro_worker/: __init__.py  config.py  logging_config.py  main.py
kiro-worker/src/kiro_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kiro-worker/src/kiro_worker/adapters/: kiro_adapter.py
kiro-worker/src/kiro_worker/db/: engine.py  models.py
kiro-worker/src/kiro_worker/domain/: enums.py  state_machine.py
kiro-worker/src/kiro_worker/routes/: cleanup.py  dashboard.py  projects.py  runs.py  tasks.py
kiro-worker/src/kiro_worker/schemas/: artifact.py  errors.py  project.py  run.py  task.py  workspace.py
kiro-worker/src/kiro_worker/services/: project_service.py  run_service.py  task_service.py  workspace_service.py
kiro-worker/tests/: conftest.py  test_api_projects.py  test_api_runs.py  test_api_tasks.py  test_kiro_adapter.py  test_state_machine.py  test_workspace_safety.py
(+78 files in other folders)
